feat: added conversations message endpoint
