# src/routes/index.ts
@@ -3,7 +3,6 @@ import authRouter from '@auth/routes';
 import userRouter from '@users/routes';
 import conversationRouter from '@/routes/conversation/routes';
 import conversationUserRouter from '@/routes/conversationUsers/routes';
-import messageRouter from '@messages/routes';
 
 const routes = express.Router();
 
@@ -88,8 +87,8 @@ routes.get('/health', (req, res) => {
 
 routes.use('/auth', authRouter);
 routes.use('/users', userRouter);
+routes.use('/conversations/:conversation_id/messages', conversationUserRouter);
 routes.use('/conversations/:conversation_id/users', conversationUserRouter);
 routes.use('/conversations', conversationRouter);
-routes.use('/messages', messageRouter);
 
 export default routes;
