# src/routes/messages/controllers.ts
@@ -1,74 +1,0 @@
-import { Request, Response } from 'express';
-import asyncHandler from 'express-async-handler';
-import { Message, MessageUpdate, NewMessage } from '@/database/types/message';
-import { CustomError } from '@/errors';
-import { body, validationResult } from 'express-validator';
-
-export interface ServiceInterface {
-  getMessages: () => Promise<Message[]>;
-  findMessageById: (id: number) => Promise<Message | undefined>;
-  findMessages: (criteria: Partial<Message>) => Promise<Message[]>;
-  createMessage: (message: NewMessage) => Promise<Message>;
-  updateMessage: (id: number, updateWith: MessageUpdate) => Promise<Message>;
-  deleteMessage: (id: number) => Promise<Message | undefined>;
-}
-
-class Controller {
-  private service: ServiceInterface;
-
-  constructor(service: ServiceInterface) {
-    this.service = service;
-  }
-
-  public getMessages = asyncHandler(async (req: Request, res: Response) => {
-    const user = req.user?.username || 'unknown';
-    const messages = await this.service.getMessages();
-    res.json({ user, messages });
-  });
-
-  public getMessageById = asyncHandler(async (req: Request, res: Response) => {
-    const id = parseInt(req.params.id, 10);
-    const message = await this.service.findMessageById(id);
-    if (message) {
-      res.json(message);
-    } else {
-      throw new CustomError(404, `Message with id ${id} not found`);
-    }
-  });
-
-  private static alphaErr =
-    'must only contain letters and be between 3 and 10 characters';
-  private static lengthErr = 'must be between 3 and 10 characters';
-
-  private validateMessage = [
-    body('user')
-      .isAlpha()
-      .withMessage(`Name ${Controller.alphaErr}`)
-      .isLength({ min: 3, max: 10 })
-      .withMessage(`Name ${Controller.lengthErr}`),
-    body('text')
-      .isLength({ min: 3, max: 10 })
-      .withMessage(`Message ${Controller.lengthErr}`),
-  ];
-
-  public createMessage = [
-    this.validateMessage,
-    asyncHandler(async (req: Request, res: Response) => {
-      const errors = validationResult(req);
-      if (!errors.isEmpty()) {
-        res.status(400).json({ errors: errors.array() });
-      }
-
-      const { text } = req.body;
-      const username = req.user?.username || 'unknown';
-      await this.service.createMessage({ user_name: username, message: text });
-      res.redirect('/messages');
-    }),
-  ];
-}
-
-const createController = (service: ServiceInterface) => {
-  return new Controller(service);
-};
-
-export default createController;
